# VQ_VAE_Geodesic

./: .gitignore  README.md  RESULTS_SUMMARY.md  pyproject.toml
data/: mnist_split_indices.pt
data/comparison/: comparison_metrics.pt
data/latents/: chunk_codebook.npz  chunk_codebook.pt  val_codes.npz  val_latents.npz  vqvae_val_codes.pt
data/samples/: geodesic_pixelcnn_samples_t1.0.pt  geodesic_pixelcnn_vs_random.pt  geodesic_temperature_comparison.pt  interpolation_data.pt  pixelcnn_vs_random.pt  sampled_codes_t1.0.pt  sampling_methods_comparison.pt  temperature_comparison.pt  vqvae_pixelcnn_vs_random.pt
notebooks/: Test.ipynb
src/vq_vae_geodesic/: config.py  hyperparameters.py  main.py  metrics.py  utils.py
src/vq_vae_geodesic/data/: __init__.py  loaders.py
src/vq_vae_geodesic/evaluation/: __init__.py  evaluate.py  extract_latents.py  reconstruct_codebook.py  reconstructions.py  sample.py  utils.py  visualize.py
src/vq_vae_geodesic/models/: __init__.py  pl_module.py
src/vq_vae_geodesic/scripts/: __init__.py  compare_geodesic_sampling.py  compare_geodesic_temperatures.py  compare_pixelcnn_vs_random.py  compare_sampling_methods.py  compare_temperatures.py  compare_vae_vs_geodesic.py  compare_vae_vs_vqvae.py  compare_vqvae_sampling.py  evaluate_pixelcnn_mnist.py  evaluate_recon_mnist.py  extract_mnist_latents.py  extract_vqvae_codes_mnist.py  interpolate_latent_codes.py  print_final_results.py  quantize_mnist.py  reconstruct_mnist.py  sample_geodesic_pixelcnn_mnist.py  sample_pixelcnn_mnist.py  train_pixelcnn_geodesic_mnist.py  train_pixelcnn_mnist.py  (+3 more)
(+44 files in other folders)
