[project]
name = "vq-vae-geodesic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michele Granatiero", email = "mikigranatiero@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "kmedoids>=0.5.3.1",
    "lightning>=2.5.5",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "notebook>=7.4.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
]

[project.scripts]
vq-vae-geodesic = "vq_vae_geodesic:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
